variables: updating textsize once again after testing found updated sizes too small fixes #286 fixes #287

--- a/apps/core/static/scss/_base.scss
+++ b/apps/core/static/scss/_base.scss
@@ -2,7 +2,7 @@ body {
     font-size: $font-size-base;
 
     @include media-breakpoint-up(sm) {
-        font-size: $font-size-md;
+        font-size: $font-size-base;
     }
 
     @include media-breakpoint-up(xl) {
