--- a/apps/core/static/scss/_footer.scss
+++ b/apps/core/static/scss/_footer.scss
@@ -11,7 +11,7 @@
         margin-right: 0.75em;
 
         font-family: $font-family-monospace;
-        font-size: $font-size-sm;
+        font-size: $font-size-xs;
         text-decoration: none;
 
         &:hover,
