--- a/apps/core/static/scss/_header.scss
+++ b/apps/core/static/scss/_header.scss
@@ -183,7 +183,7 @@ button.header__bar__toggle {
 
     z-index: 3;
     font-family: $font-family-monospace;
-    font-size: $font-size-sm;
+    font-size: $font-size-xs;
     border-bottom: none;
 
     @include media-breakpoint-up(md) {
