--- a/apps/core/static/scss/_images.scss
+++ b/apps/core/static/scss/_images.scss
@@ -1,6 +1,6 @@
 .image-with-caption__caption {
     font-family: $font-family-monospace;
-    font-size: $font-size-sm;
+    font-size: $font-size-xs;
 
     margin-top: 1rem;
     padding: 0 0.5rem;
