--- a/apps/core/static/scss/_lang-switch.scss
+++ b/apps/core/static/scss/_lang-switch.scss
@@ -12,7 +12,7 @@
 .lang-switch__active,
 .lang-switch__link {
     font-family: $font-family-monospace;
-    font-size: $font-size-sm;
+    font-size: $font-size-xs;
 }
 
 .lang-switch__link {
