--- a/apps/core/static/scss/_person-list.scss
+++ b/apps/core/static/scss/_person-list.scss
@@ -46,6 +46,7 @@ $line-bottom: 0.2rem;
 }
 
 .person-list__person-name {
+    font-size: $font-size-xl;
     display: inline-block;
     margin-bottom: 0;
     margin-right: 1.5rem;
