--- a/apps/core/static/scss/_variables.scss
+++ b/apps/core/static/scss/_variables.scss
@@ -13,9 +13,9 @@ $font-family-base: 'Plantin', 'Times New Roman', serif;
 $font-family-monospace:  'Favorit', monospace;
 
 $font-size-xl: 1.4375rem;
-$font-size-md: 1.2rem;
-$font-size-base: 1rem;
-$font-size-sm: 0.8rem;
+$font-size-base: 1.3125rem;
+$font-size-sm: 1rem;
+$font-size-xs: 0.8rem;
 $line-height-base: 1.4;
 
 $font-size-h1: 2.4rem;
